--- a/src/index.css
+++ b/src/index.css
@@ -32,6 +32,20 @@ html {
   background-blend-mode: multiply;
 }
 
+#dashboard {
+  background: url("/overlay.jpg");
+  background-repeat: repeat;
+  background-size: contain;
+  background-blend-mode: multiply;
+}
+
+.element-overlay {
+  background: url("/overlay55.jpg");
+  background-repeat: repeat;
+  background-size: contain;
+  background-blend-mode: overlay;
+}
+
 /* width */
 ::-webkit-scrollbar {
   width: 0;
